junit5 og codecleanup